# Heuresis

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
analysis/: __init__.py
analysis/libs/: __init__.py  archive.py  data.py  ideas.py  legacy_store.py  lineage_idea_card.py  lineage_tree.py  paper_theme.py
analysis/utils/: __init__.py  lineage_tree.py  plotting.py
configs/discogen/: modelunlearning_wmdp_cyber.yaml  onpolicy_rl_breakout_all_editable.yaml  onpolicy_rl_breakout_loss_only.yaml  onpolicy_rl_example.yaml
docs/: README.md  add-strategy.md  add-task.md  concepts.md  configuration.md  dependencies.md  experiments.md  getting-started.md  reference.md  troubleshooting.md
docs/pitch/: gen_pitch.py
maintainer/: README.md
runs/: README.md
scripts/: check.sh  island_embedding_map.py  plot_lineage_tree.py  preflight_nanogpt.py  setup.sh
scripts/smoke/: claude_bash_timeout.py  claude_harness.py  codex_gpt55.py  embedder.py  hacker_judge.py  (+5 more)
tests/: test_api_keys.py  test_archive_index.py  test_bbob_task.py  test_bwrap_dns_resolver_mount.py  test_bwrap_lockdown.py  test_bwrap_run_command.py  test_bwrap_symlink_resolution.py  test_cell_targeted.py  test_check_script.py  test_classifier.py  test_curiosity.py  test_curiosity_plus.py  test_diff_excludes.py  test_discogen_fabrication_regex.py  test_discogen_features.py  test_discogen_grader.py  test_discogen_helpers.py  test_discogen_preflight.py  test_discogen_prompt_render.py  test_embedding.py  test_env.py  test_experiment.py  test_experiment_cli_args.py  test_experiment_id_keyed_tables.py  test_feature_space.py  test_go_explore.py  test_grading_fallback.py  test_hacker_judge.py  test_harness_strip_env.py  test_harness_workspace_id.py  test_islands.py  test_judge_and_maybe_regrade.py  test_judge_store.py  test_legacy_store.py  test_lineage_tree.py  test_linear_helpers.py  test_linear_search.py  test_memory_cli.py  test_memory_embeddings.py  test_memory_integration.py  (+29 more)
(+215 files in other folders)
